# nigehbaan

./: .dockerignore  .env.example  .gitignore  Dockerfile.scraper  INFRA.md  MASTER.md  README.md  SCRAPER_AUDIT_REPORT.md  SCRAPER_AUDIT_REPORT_2026-03-20.md  docker-compose.prod.yml  docker-compose.yml  pytest.ini  run_scraper.py  scraper_updates.md
backend/: .env.example  Dockerfile  SCRAPER_AUDIT_REPORT.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_statistical_and_transparency_tables.py  003_add_court_judgment_constraints.py  004_add_report_ref_and_date.py  005_add_resources_table.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  base.py  border_crossings.py  boundaries.py  brick_kilns.py  court_judgments.py  incidents.py  news_articles.py  public_reports.py  resources.py  scraper_runs.py  statistical_reports.py  tip_report.py  trafficking_routes.py  transparency_reports.py  vulnerability.py
backend/app/schemas/: __init__.py  common.py  dashboard.py  districts.py  export.py  legal.py  map.py  news.py  reports.py  scrapers.py  search.py
backend/app/services/: ai_extractor.py  geocoder.py  judgment_importer.py  nlp_pipeline.py  pipeline.py  risk_scorer.py  s3_upload.py  spatial_analysis.py
backend/app/tasks/: backfill_tasks.py  celery_app.py  import_tasks.py  processing_tasks.py  schedule.py  scraping_tasks.py
backend/app/utils/: gazetteer.py  name_normalizer.py  pdf_extractor.py
backend/migrations/: schema.sql
(+330 files in other folders)
