[project]
name = "nigehbaan-backend"
version = "0.1.0"
description = "Nigehbaan — Pakistan Child Trafficking Intelligence Platform API"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
